# rust-webapp

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/: 20221203165213_init.sql  20221204160304_label.sql
src/: handlers.rs  main.rs  repositories.rs
src/handlers/: label.rs  todo.rs
src/repositories/: label.rs  todo.rs
todo-front/: package-lock.json  package.json
todo-front/src/: App.tsx  main.tsx
todo-front/src/components/: SideNav.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todo-front/src/lib/: toggleLabels.ts
todo-front/src/lib/api/: label.ts  todo.ts
todo-front/src/styles/: modal.ts
todo-front/src/types/: todo.d.ts
