[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
hyper = "0.14.23"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
#warp = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = {version = "1.0.147", features = ["derive"]}
# serde = "1.0.147"
serde_json = "1.0.88"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
mime = "0.3.16"
validator = { version = "0.15", features = ["derive"] }
http-body = "0.4.5"
